TP5: move script to TP5 root; update READMEs and VS Code task; remove src folder

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "type": "shell",
             "command": ".\\.venv\\Scripts\\python.exe",
             "args": [
-                "TP5\\src\\mnist_cnn.py"
+                "TP5\\mnist_cnn.py"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
